# BillMate

./: README.md  app.py  bill_merger.py  categories.json  categories.yaml  pyproject.toml  utils.py
bill_merger/: base.py
bill_parser/: __init__.py  alipay_bill_parser.py  base.py  icbc_bill_parser.py  wechat_bill_parser.py
config/: categories.json  special_cases.json
intelli_classifier/: __init__.py  classifier.py
prompt/: expenditure.jinja  income.jinja
prompts/: classifier.jinja
utils/: general.py
